# docs/swagger.yaml
@@ -14,8 +14,14 @@ definitions:
         type: integer
       status:
         type: string
+      user_email:
+        type: string
       user_id:
         type: integer
+      user_name:
+        type: string
+      user_role:
+        type: string
     type: object
   models.Comment:
     properties:
@@ -97,6 +103,32 @@ info:
   version: "1.0"
 paths:
   /api/account-deletion-request:
+    get:
+      description: Get the latest account deletion request of the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - BearerAuth: []
+      summary: Get my account deletion request
+      tags:
+      - Account Deletion
     post:
       consumes:
       - application/json
@@ -121,6 +153,10 @@ paths:
             $ref: '#/definitions/utils.Response'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/utils.Response'
         "409":
